# cska_github

./: .env  .gitignor  .gitignore  AUTO_SESSIONS_README.md  CLEANUP_REPORT.md  DEVELOPER_SPECIFICATION.md  DRY_REFACTORING_PROPOSALS.md  ENV_SETUP.md  FINAL_CLEANUP_REPORT.md  HIERARCHICAL_GROUPS.md  MIGRATION_REPORT.md  PROJECT_SPECIFICATION.md  README.md  REFACTORING_REPORT.md  ROLE_GROUP_SYNC_REPORT.md  ROLE_VISUALIZATION_ENHANCEMENT.md  SUPABASE_CONNECTION.md  SUPABASE_QUICK_SETUP.md  SUPABASE_SETUP.md  SUPABASE_TEST_REPORT.md  USER_DOCUMENTATION.md  analyze_users.py  check_data.py  check_relationships.py  check_tables.py  cleanup_and_test.py  create_comprehensive_test_data.py  create_corrected_test_data.py  create_full_test_data.py  create_local_db.sql  create_roles.py  create_simple_test_data.py  create_superuser.py  create_superuser_script.py  create_test_data.py  database_schema.sql  db.sqlite3  demo_role_group_usage.py  env_template.txt  export_to_postgresql.py  (+34 more)
.lingma/rules/: project.lingma
aap/: apps.py
aap/static_src/: package-lock.json  package.json
athletes/: admin.py  apps.py  models.py  urls.py  views.py
athletes/migrations/: 0001_initial.py  0002_initial.py  0003_alter_athlete_birth_date_alter_athlete_is_active_and_more.py  0004_alter_athlete_phone.py  __init__.py
attendance/: admin.py  apps.py  models.py  urls.py  views.py
attendance/migrations/: 0001_initial.py  0002_initial.py  0003_attendance_delete_attendancerecord.py  __init__.py
config/: settings.py  urls.py
core/: admin.py  admin_clean.py  admin_registration.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py  widgets.py
core/admin/: __init__.py  base.py  (+3 more)
cska_django_supabase/: asgi.py  settings.py  urls.py  wsgi.py
documents_ui/: apps.py
groups/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
payments/: admin.py  apps.py  models.py  urls.py  views.py
payments_ui/: apps.py
sportcrm/: asgi.py  settings.py  urls.py  views.py  wsgi.py
sporttheme/: apps.py  package-lock.json
templates/: base.html  home.html
(+139 files in other folders)
